# pipboy-pi

./: .gitignore  .replit  README.md  init.bat  init.sh  replit.md  requirements.txt  run_framework_demo.py  test_framework.py  user_config.py
.claude/: settings.local.json
modules/: items.ini  items.py  main.py  paths.py  settings.py  tab_manager.py  ui.py  util_functs.py
modules/cpp/: CMakeLists.txt  __init__.py  build.bat  math.cpp  math.hpp  obj_loader.cpp  obj_loader.hpp  wireframe.cp312-win_amd64.pyd  wireframe.cp313-win_amd64.pyd  wireframe.cpp  wireframe.exp  wireframe.lib
modules/tabs/inv_tab/: inv_base.py
modules/tabs/map_tab/: world_tab.py
modules/tabs/radio_tab/: radio_tab.py
modules/tabs/stat_tab/: special_tab.py  stat_tab.py  status_tab.py
objs/: normalizeobj.py
pipboy-pwa/: app.js  effects.js  index.html  manifest.json  server.py  service-worker.js  settings.js  styles.css  test_data_tabs.html
pipboy_framework/: __init__.py  example.py
pipboy_framework/core/: framework.py  tab_system.py  theme.py
pipboy_framework/tabs/: base_tab.py  example_tab.py
pipboy_framework/ui/: components.py  effects.py
